--- a/51_CSS/14-5_float.html
+++ b/51_CSS/14-5_float.html
@@ -10,6 +10,11 @@
     body,ul {margin: 0; line-height: 1.8;}
     ul {margin:0; padding: 0;}
     li {list-style: none;}
+    .clearfix::after {
+        content: ''; 
+        clear: both; 
+        display: block;
+    }
 
     .container {
         background: yellow;
@@ -23,10 +28,10 @@
         padding: 54px 0;
     }
 
-    li:nth-of-type(1) {background: #ccc}
+    /* li:nth-of-type(1) {background: #ccc}
     li:nth-of-type(2) {background: #bbb}
     li:nth-of-type(3) {background: #aaa}
-    li:nth-of-type(4) {background: #999}
+    li:nth-of-type(4) {background: #999} */
 
     span {
         display: block;
@@ -36,12 +41,10 @@
 <body>
     <h1>텍스트 가로로 4등분</h1>
     <hr>
-    <div class="container">
-        <ul>
+        <ul class="container">
             <li>a<span>(1)</span></li>
             <li>y<span>(2)</span></li>
             <li>g<span>(3)</span></li>
             <li>h<span>(4)</span></li>
         </ul>
-    </div>
 </html>
