--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -112,9 +112,9 @@
                 </div>
                 <div class="info">
                     <div>
-                        <address>인천광역시 남동구<br>
-                            Phone: 010-1234-5678<br>
-                            Email: wireframe@hanmail.net
+                        <address>인천광역시 서구<br>
+                            Phone: 010-2289-1009<br>
+                            Email: 2_chuu@naver.com
                         </address>
                     </div>
                     <p>전화 주시거나 메일 주시면 연락드리겠습니다:</p>
@@ -122,7 +122,7 @@
                         <input type="text" name="username" id="username" placeholder="이름">
                         <input type="email" name="useremail" id="useremail" placeholder="이메일">
                         <input type="text" name="usermsg" id="usermsg" placeholder="메시지">
-                        <button type="submit">메시지 전송하기</button> 
+                        <button type="submit"> <img src="images/icon_btn_1.png" alt="메시지전송아이콘"> <span>메시지 전송하기</span></button> 
                     </form>
                 </div><!-- //.info  -->
             </div><!-- //.where  -->
@@ -132,8 +132,8 @@
     <!-- 푸터  -->
     <footer>
         <div>
-            <a href="#top">위로 가기</a>
-            <p>Copyright 2023 LJJ. All rights reserved.</p>
+            <a href="#top" class="toTheTop"><i class="fa-solid fa-arrow-up"></i>위로 가기</a>
+            <p>Copyright 2023 JJ. All rights reserved.</p>
         </div>
     </footer><!-- //푸터  -->
 </body>
