--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -29,9 +29,9 @@
 
     <!-- 섹션2  -->
     <section id="sec2">
-        <h3>ABOUT ME</h3>
-        <p class="tac"><em>I love Web Design</em></p>
         <div class="container">
+            <h3>ABOUT ME</h3>
+            <p class="tac"><em>I love Web Design</em></p>
             <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer.
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -78,12 +78,12 @@
         <div class="para">
             <h2>PORTFOLIO</h2>
         </div>
-        <h3>MY WORK</h3>
-        <p class="tac">
-            <em>나의 최근 작품들이 여기에 있습니다.</em><br>
-            <em>클릭하면 큰 이미지로 볼 수 있습니다.</em>
-        </p>
         <div class="container myWork">
+            <h3>MY WORK</h3>
+            <p class="tac">
+                <em>나의 최근 작품들이 여기에 있습니다.<br>
+                클릭하면 큰 이미지로 볼 수 있습니다.</em>
+            </p>
             <ul class="clearfix">
                 <li><img src="images/pf_bearCloseup.jpg" alt="BearClose up"></li>
                 <li><img src="images/pf_coffeeBeans.jpg" alt="Coffee Beans"></li>
@@ -112,9 +112,9 @@
                 </div>
                 <div class="info">
                     <div>
-                        <address>인천광역시 서구<br>
-                            Phone: 010-2289-1009<br>
-                            Email: 2_chuu@naver.com
+                        <address><i class="fa-solid fa-location-dot"></i>인천광역시 서구<br>
+                            <i class="fa-solid fa-phone"></i>Phone: 010-2289-1009<br>
+                            <i class="fa-solid fa-envelope"></i>Email: 2_chuu@naver.com
                         </address>
                     </div>
                     <p>전화 주시거나 메일 주시면 연락드리겠습니다:</p>
@@ -133,6 +133,14 @@
     <footer>
         <div>
             <a href="#top" class="toTheTop"><i class="fa-solid fa-arrow-up"></i>위로 가기</a>
+            <div class="sns">
+                <a href="https://ko-kr.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-snapchat"></i></a>
+                <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                <a href="https://twitter.com/?lang=ko"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
             <p>Copyright 2023 JJ. All rights reserved.</p>
         </div>
     </footer><!-- //푸터  -->
