--- a/70_project1/index.html
+++ b/70_project1/index.html
@@ -42,7 +42,7 @@
                 consequat.</p>
             <div class="clearfix pf2">
                 <div>
-                    <p class="tac"><b>Lee Jin Ju</b></p>
+                    <p class="tac"><i class="fa-solid fa-user"></i><b>Lee Jin Ju</b></p>
                     <img src="images/Photo of Me.jpg" alt="나의 사진">
                 </div>
                 <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -51,15 +51,15 @@
                 <h4>Im really good at:</h4>
                 <ul>
                     <li>
-                        <p>Potoshop+Illustrator+Figma</p>
+                        <p><i class="fa-regular fa-image"></i>Potoshop+Illustrator+Figma</p>
                         <div><span>90%</span></div>
                     </li>
                     <li>
-                        <p>HTML5+CSS3</p>
+                        <p><i class="fa-solid fa-code"></i>HTML5+CSS3</p>
                         <div><span>85%</span></div>
                     </li>
                     <li>
-                        <p>JavaScript+jQuery</p>
+                        <p><i class="fa-brands fa-square-js"></i>JavaScript+jQuery</p>
                         <div><span>75%</span></div>
                     </li>
                 </ul>
@@ -94,7 +94,7 @@
                 <li><img src="images/pf_theMist.jpg" alt="The Mist"></li>
                 <li><img src="images/pf_theMistOverTheMountains.jpg" alt="The Mist Over The Mountains"></li>
             </ul>
-            <a href="#">더보기</a>
+            <a href="#">LOAD MORE</a>
         </div>
     </section><!-- //섹션3  -->
 
