--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -37,7 +37,7 @@
         <ul>
             <li>
                 <div><img src="images/pj_summerHouse.jpg" alt="Summer House 이미지1"></div>
-                <h3>Summer House</h3>
+                    <h3>Summer House</h3>
             </li>
             <li>
                 <div><img src="images/pj_brickHouse.jpg" alt="Brick House 이미지2"></div>
@@ -85,28 +85,28 @@
                 <h3>John Doe</h3>
                 <P>CEO & Founder</P>
                 <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                <div><a href="#">Contact버튼</a></div>
+                <div><a href="#">Contact</a></div>
             </li>
             <li>
                 <div><img src="images/Jane.jpg" alt="Jane Doe"></div>
                 <h3>Jane Doe</h3>
                 <P>Architect</P>
                 <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                <div><a href="#">Contact버튼</a></div>
+                <div><a href="#">Contact</a></div>
             </li>
             <li>
                 <div><img src="images/Mike.jpg" alt="Mike Ross"></div>
                 <h3>Mike Ross</h3>
                 <P>Architect</P>
                 <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                <div><a href="#">Contact버튼</a></div>
+                <div><a href="#">Contact</a></div>
             </li>
             <li>
                 <div><img src="images/Dan.jpg" alt="Dan Star"></div>
                 <h3>Dan Star</h3>
                 <P>Architect</P>
                 <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                <div><a href="#">Contact버튼</a></div>
+                <div><a href="#">Contact</a></div>
             </li>
         </ul>
     </section> <!-- /섹션3 -->
@@ -120,7 +120,7 @@
             <input type="email" placeholder="Email" name="user_email">
             <input type="text" placeholder="Subject" name="user_subject">
             <input type="text" placeholder="Comment" name="user_comment">
-            <input type="summit" value="send message" >
+            <button type="summit" value="send message">SEND MESSAGE</button>
         </form>
         <div><img src="images/map.jpg" alt="지도이미지"></img></div>
     </section> <!-- /섹션4 -->
