--- a/51_CSS/18_table.html
+++ b/51_CSS/18_table.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
+    <title>HTML+CSS</title>
+    <style>
+        table, th, td {
+            border: 1px solid red;
+            border-spacing: 0;
+        }
+
+        /* border-spacing과 border-collapse는 <table>에만 지정 */
+        .table1 {
+            border-width: 2px;
+            border-collapse: collapse;
+            caption-side: ;
+        }
+        .table1 td, .table1 th {
+            border-width: 2px;
+        }
+
+
+    </style>
 </head>
 <body>
     <h1>표</h1>
@@ -24,7 +42,7 @@
         </tr>
     </table>
     <hr>
-    <table>
+    <table class="table1">
         <caption>1학년 성적표</caption>
         <colgroup>
             <col>
