--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -19,7 +19,7 @@
             <ul class="clearfix">
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contack</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header> <!--  /헤더 -->
@@ -36,7 +36,7 @@
     <section>
         <div class="container">
             <h2>Projects</h2>
-            <ul class="pj">
+            <ul class="clearfix">
                 <li>
                     <div class="pjb">
                         <h3>Summer House</h3>
@@ -44,32 +44,46 @@
                     <div><img src="images/pj_summerHouse.jpg" alt="Summer House 이미지1"></div>
                 </li>
                 <li>
+                    <div class="pjb">
+                        <h3>Brick House</h3>
+                    </div>
                     <div><img src="images/pj_brickHouse.jpg" alt="Brick House 이미지2"></div>
-                    <h3>Brick House</h3>
                 </li>
                 <li>
+                    <div class="pjb">
+                        <h3>Renovated</h3>
+                    </div>
                     <div><img src="images/pj_renovated.jpg" alt="Renovated 이미지3"></div>
-                    <h3>Renovated</h3>
                 </li>
                 <li>
+                    <div class="pjb">
+                        <h3>Barn House</h3>
+                    </div>
                     <div><img src="images/pj_barnHouse.jpg" alt="Barn House 이미지4"></div>
-                    <h3>Barn House</h3>
                 </li>
                 <li>
+                    <div class="pjb">
+                        <h3>Summer House</h3>
+                    </div>
                     <div><img src="images/pj_brickHouse.jpg" alt="Summer House 이미지5"></div>
-                    <h3>Summer House</h3>
                 </li>
                 <li>
+                    <div class="pjb">
+                        <h3>Brick House</h3>
+                    </div>
                     <div><img src="images/pj_summerHouse.jpg" alt="Brick House 이미지6"></div>
-                    <h3>Brick House</h3>
                 </li>
                 <li>
+                    <div class="pjb">
+                        <h3>Renovated</h3>
+                    </div>
                     <div><img src="images/pj_barnHouse.jpg" alt="Renovated 이미지7"></div>
-                    <h3>Renovated</h3>
                 </li>
                 <li>
+                    <div class="pjb">
+                        <h3>Barn House</h3>
+                    </div>
                     <div><img src="images/pj_renovated.jpg" alt="Barn House 이미지8"></div>
-                    <h3>Barn House</h3>
                 </li>
             </ul>
         </div>
@@ -85,50 +99,50 @@
                 anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat.</p>
-            <ul>
-                <li>
-                    <div><img src="images/John.jpg" alt="john Doe"></div>
-                    <h3>John Doe</h3>
-                    <P>CEO & Founder</P>
-                    <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                    <div><a href="#">Contact</a></div>
-                </li>
-                <li>
-                    <div><img src="images/Jane.jpg" alt="Jane Doe"></div>
-                    <h3>Jane Doe</h3>
-                    <P>Architect</P>
-                    <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                    <div><a href="#">Contact</a></div>
-                </li>
-                <li>
-                    <div><img src="images/Mike.jpg" alt="Mike Ross"></div>
-                    <h3>Mike Ross</h3>
-                    <P>Architect</P>
-                    <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                    <div><a href="#">Contact</a></div>
-                </li>
-                <li>
-                    <div><img src="images/Dan.jpg" alt="Dan Star"></div>
-                    <h3>Dan Star</h3>
-                    <P>Architect</P>
-                    <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                    <div><a href="#">Contact</a></div>
-                </li>
-            </ul>
+                <ul class="clearfix sec3">
+                    <li>
+                        <div><img src="images/John.jpg" alt="john Doe"></div>
+                        <h3>John Doe</h3>
+                        <P>CEO & Founder</P>
+                        <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
+                        <div class="ctb"><a href="#">Contact</a></div>
+                    </li>
+                    <li>
+                        <div><img src="images/Jane.jpg" alt="Jane Doe"></div>
+                        <h3>Jane Doe</h3>
+                        <P>Architect</P>
+                        <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
+                        <div class="ctb"><a href="#">Contact</a></div>
+                    </li>
+                    <li>
+                        <div><img src="images/Mike.jpg" alt="Mike Ross"></div>
+                        <h3>Mike Ross</h3>
+                        <P>Architect</P>
+                        <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
+                        <div class="ctb"><a href="#">Contact</a></div>
+                    </li>
+                    <li>
+                        <div><img src="images/Dan.jpg" alt="Dan Star"></div>
+                        <h3>Dan Star</h3>
+                        <P>Architect</P>
+                        <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
+                        <div class="ctb"><a href="#">Contact</a></div>
+                    </li>
+                </ul>
         </div>
     </section> <!-- /섹션3 -->
 
     <!-- 섹션4 -->
     <section>
         <div class="container">
-            <h2>Contact</h2>
+            <h2 class="sec4">Contact</h2>
             <p>Lets get in touch and talk about your next project.</p>
             <form action="message.php" mehtod="post">
                 <input type="text" placeholder="Name" name="user_name">
                 <input type="email" placeholder="Email" name="user_email">
                 <input type="text" placeholder="Subject" name="user_subject">
                 <input type="text" placeholder="Comment" name="user_comment">
-                <button type="summit" value="send message">SEND MESSAGE</button>
+                <button type="summit">SEND MESSAGE</button>
             </form>
             <div><img src="images/map.jpg" alt="지도이미지"></img></div>
         </div>
