--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -100,33 +100,33 @@
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat.</p>
                 <ul class="clearfix sec3">
-                    <li>
+                    <li class="clearfix">
                         <div><img src="images/John.jpg" alt="john Doe"></div>
                         <h3>John Doe</h3>
                         <P>CEO & Founder</P>
                         <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                        <div class="ctb"><a href="#">Contact</a></div>
+                        <div class="ctb"><button>Contact</button></div>
                     </li>
                     <li>
                         <div><img src="images/Jane.jpg" alt="Jane Doe"></div>
                         <h3>Jane Doe</h3>
                         <P>Architect</P>
                         <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                        <div class="ctb"><a href="#">Contact</a></div>
+                        <div class="ctb"><button>Contact</button></div>
                     </li>
                     <li>
                         <div><img src="images/Mike.jpg" alt="Mike Ross"></div>
                         <h3>Mike Ross</h3>
                         <P>Architect</P>
                         <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                        <div class="ctb"><a href="#">Contact</a></div>
+                        <div class="ctb"><button>Contact</button></div>
                     </li>
                     <li>
                         <div><img src="images/Dan.jpg" alt="Dan Star"></div>
                         <h3>Dan Star</h3>
                         <P>Architect</P>
                         <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                        <div class="ctb"><a href="#">Contact</a></div>
+                        <div class="ctb"><button>Contact</button></div>
                     </li>
                 </ul>
         </div>
@@ -134,7 +134,7 @@
 
     <!-- 섹션4 -->
     <section>
-        <div class="container">
+        <div class="container clearfix">
             <h2 class="sec4">Contact</h2>
             <p>Lets get in touch and talk about your next project.</p>
             <form action="message.php" mehtod="post">
