--- a/70_project2_self/index.html
+++ b/70_project2_self/index.html
@@ -14,9 +14,9 @@
     <!--  헤더 -->
     <header>
         <!-- 로고. -->
-        <h1 class="logo"><b>BR</b> Architects</h1>
+        <h1><a href="#"><b>BR</b> Architects</a></h1>
         <nav>
-            <ul>
+            <ul class="clearfix">
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -26,51 +26,72 @@
 
     <!-- 섹션1 -->
     <section>
-        <div><img src="images/Architecture.jpg" alt="Architecture"></div>
-        <h1><b>BR</b> Architects</h1>
+        <div class="container">
+            <div><img src="images/Architecture.jpg" alt="Architecture"></div>
+            <h2 class="logo"><b>BR</b> Architects</h2>
+        </div>
     </section> <!-- /섹션1 -->
 
     <!-- 섹션2 -->
     <section>
+        <div class="container">
             <h2>Projects</h2>
-            <ul>
+            <ul class="clearfix sec2">
                 <li>
-                    <span>Summer House</span>
+                    <div class="pjb">
+                        <h3>Summer House</h3>
+                    </div>
                     <div><img src="images/pj_summerHouse.jpg" alt="Summer House 이미지1"></div>
                 </li>
                 <li>
-                    <span>Brick House</span>
+                    <div class="pjb">
+                        <h3>Brick House</h3>
+                    </div>
                     <div><img src="images/pj_brickHouse.jpg" alt="Brick House 이미지2"></div>
                 </li>
                 <li>
-                    <span>Renovated</span>
+                    <div class="pjb">
+                        <h3>Renovated</h3>
+                    </div>
                     <div><img src="images/pj_renovated.jpg" alt="Renovated 이미지3"></div>
                 </li>
                 <li>
-                    <span>Barn House</span>
+                    <div class="pjb">
+                        <h3>Barn House</h3>
+                    </div>
                     <div><img src="images/pj_barnHouse.jpg" alt="Barn House 이미지4"></div>
                 </li>
                 <li>
-                    <span>Summer House</span>
+                    <div class="pjb">
+                        <h3>Summer House</h3>
+                    </div>
                     <div><img src="images/pj_brickHouse.jpg" alt="Summer House 이미지5"></div>
                 </li>
                 <li>
-                    <span>Brick House</span>
+                    <div class="pjb">
+                        <h3>Brick House</h3>
+                    </div>
                     <div><img src="images/pj_summerHouse.jpg" alt="Brick House 이미지6"></div>
                 </li>
                 <li>
-                    <span>Renovated</span>
+                    <div class="pjb">
+                        <h3>Renovated</h3>
+                    </div>
                     <div><img src="images/pj_barnHouse.jpg" alt="Renovated 이미지7"></div>
                 </li>
                 <li>
-                    <span>Barn House</span>
+                    <div class="pjb">
+                        <h3>Barn House</h3>
+                    </div>
                     <div><img src="images/pj_renovated.jpg" alt="Barn House 이미지8"></div>
                 </li>
             </ul>
-</section> <!-- /섹션2 -->
+        </div>
+    </section> <!-- /섹션2 -->
 
     <!-- 섹션3 -->
     <section>
+        <div class="container">
             <h2>About</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -78,41 +99,43 @@
                 anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat.</p>
-                <ul>
-                    <li>
+                <ul class="clearfix sec3">
+                    <li class="clearfix">
                         <div><img src="images/John.jpg" alt="john Doe"></div>
                         <h3>John Doe</h3>
                         <P>CEO & Founder</P>
                         <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                        <button>Contact</button>
+                        <div class="ctb"><button>Contact</button></div>
                     </li>
                     <li>
                         <div><img src="images/Jane.jpg" alt="Jane Doe"></div>
                         <h3>Jane Doe</h3>
                         <P>Architect</P>
                         <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                        <button>Contact</button>
+                        <div class="ctb"><button>Contact</button></div>
                     </li>
                     <li>
                         <div><img src="images/Mike.jpg" alt="Mike Ross"></div>
                         <h3>Mike Ross</h3>
                         <P>Architect</P>
                         <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                        <button>Contact</button>
+                        <div class="ctb"><button>Contact</button></div>
                     </li>
                     <li>
                         <div><img src="images/Dan.jpg" alt="Dan Star"></div>
                         <h3>Dan Star</h3>
                         <P>Architect</P>
                         <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
-                        <button>Contact</button>
+                        <div class="ctb"><button>Contact</button></div>
                     </li>
                 </ul>
+        </div>
     </section> <!-- /섹션3 -->
 
     <!-- 섹션4 -->
     <section>
-            <h2>Contact</h2>
+        <div class="container clearfix">
+            <h2 class="sec4">Contact</h2>
             <p>Lets get in touch and talk about your next project.</p>
             <form action="message.php" mehtod="post">
                 <input type="text" placeholder="Name" name="user_name">
@@ -121,12 +144,13 @@
                 <input type="text" placeholder="Comment" name="user_comment">
                 <button type="summit">SEND MESSAGE</button>
             </form>
-            <img src="images/map.jpg" alt="지도이미지"></img>
+            <div><img src="images/map.jpg" alt="지도이미지"></img></div>
+        </div>
     </section> <!-- /섹션4 -->
 
     <!-- 푸터 -->
     <footer>
-        <p class="copy">Copyright 2023 JJ. All rights reserved.</p>
+        <p>Powered by w3.css</p>
     </footer> <!-- /푸터 -->
 </body>
 
