--- a/51_CSS/20-1_translate-scale.html
+++ b/51_CSS/20-1_translate-scale.html
@@ -9,7 +9,7 @@
         .wrap {
             border: 1px solid black;
             margin: 20px;
-            /* perspective: 1000px; */
+            perspective: 1000px;
         }
         .trf {
             display: inline-block;
@@ -19,80 +19,56 @@
             transition: .5s;
         }
 
-        .wrap:hover .trftx {
+        .wrap:hover .trfscx {
             /* transform: scaleX (숫자); */
             transform: scaleX(2);
         }
-        .wrap:hover .trfty {
+        .wrap:hover .trfscy {
             /* transform: scaleY (숫자); */
             transform: scaleY(1.2);
         }
-        .trftz {transform: perspective(1000px)  scaleZ(1) translateZ(0px);}
-        .wrap:hover .trftz {
+        .trfscz {
+            /* transform: 값1, 값2 ...; */
+            transform: scaleZ(1) translateZ(0px);}
+        .wrap:hover .trfscz {
             /* 원근감(perspective), translate()와 함께 사용해야 한다. */
             /* transform: scaleZ (z); */
-            transform: perspective(1000px)  scaleZ(2) translateZ(100px);
+            transform: scaleZ(1.2) translateZ(100px);
         }
         
-        .trftd {transform: perspective(1000px) scale3d(1,1,1);}
-        .wrap:hover .trftd {
-            /* transform: scale3d (x,y,z); */
-            transform: perspective(1000px) scale3d(1.2,1.2,1.2) ;
+        .trfscd {transform: scale3d(1,1,1) translateZ(0px);}
+        .wrap:hover .trfscd {
+            /* transform: scale3d (숫자(x),숫자(y),숫자(z)); */
+            transform: scale3d(1.2,1.2,1.2) translateZ(100px);
         }
-        .wrap:hover .trft {
+        .wrap:hover .trfsc {
             /* transform: scale (x,[y]); */
             /* translate는 하나의 인수만 쓸경우 좌우방향 이동 */
-            /* scale은 하나의 인수만 쓸 경우 가로/세로 비율유지 크기 변경  */
-            transform: scale(1.2,1.2);
+            /* scale은 하나의 인수만 쓸 경우 가로/세로 비율유지 크기 변경(하나쓰나 두개쓰나 같은결과)  */
+            /* transform: scale(1.2,1.2); */
+            transform: scale (1.2);
         }
 
-                /* -------------------------------------------------------- */
-        .move {
-            width: 200px;
-            background: thistle;
-            overflow: hidden;
-            padding: 10px 20px;
-        }
-        .move .bg {
-            float: left;
-            /* background: #000; */
-            transform: scaleY(20px);
-            transition: .3s ease-out;
-        }
-        .move:hover .bg {transform: scaleY(10px);}
-
-        .move .txt {
-            float: right;
-        }
     </style>
 </head>
 <body>
     <h1>변환</h1>
-    <h2>이동(move)</h2>
+    <h2>크기 조정</h2>
     <div class="wrap">
-        <span class="trf trftx">scaleX</span>transform
-    </div>
-    <div class="wrap">
-        <span class="trf trfty">scaleY</span>transform
+        <span class="trf trfscx">scaleX</span>transform
     </div>
     <div class="wrap">
-        <span class="trf trftz">scaleZ</span>transform
+        <span class="trf trfscy">scaleY</span>transform
     </div>
     <div class="wrap">
-        <span class="trf trftd">scale3D</span>transform
+        <span class="trf trfscz">scaleZ</span>transform
     </div>
     <div class="wrap">
-        <span class="trf trft">scale</span>transform
+        <span class="trf trfscd">scale3D</span>transform
     </div>
-<hr>
-    <div class="move">
-        <div class="bg">
-            <img src="assets/inthree/main-visual-dot-01.png" alt="">
-        </div>
-        <div class="txt">
-            <h3>가이드맵</h3>
-            <p>서울랜드를 한눈에<br> 둘러보세요.</p>
-        </div>
+    <div class="wrap">
+        <span class="trf trfsc">scale</span>transform
     </div>
+
 </body>
 </html>
