--- a/51_CSS/20-3_rotate.html
+++ b/51_CSS/20-3_rotate.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
+        .container {
+            overflow: hidden;    
+        }
         .wrap {
+            float: left;
             border: 1px solid black;
             margin: 20px;
             perspective: 1000px;
@@ -41,6 +45,11 @@
             transform: rotate3d(2, 2, 2, 45deg);
         }
 
+        .wrap:hover .trfr {
+            /* transform: rotateX (숫자deg); */
+            transform: rotate(90deg);
+            }
+
         .wrap .trfro {
             transform-origin: 0% 0%;
         }
@@ -53,10 +62,39 @@
         .wrap:nth-of-type(7) {
             background: #000;
             color: red; 
-            perspective: 2000px;
+            perspective: 200px;
             perspective-origin: right bottom;}
         
 
+
+            .trfo1 {
+                /* transform-origin: center center; */
+                transform-origin: 50% 50%;
+            }
+            .trfo2 {
+                /* transform-origin: left top; */
+                transform-origin: 0 0;
+            }
+            .trfo3 {
+                /* transform-origin: x축 y축; */
+                /* transform-origin: right top; */
+                /* transform-origin: top right; */
+                transform-origin: 100% 0;
+            }
+            .trfo4 {
+                /* transform-origin: right bottom; */
+                transform-origin: 100% 100%;
+            }
+            .trfo5 {
+                /* transform-origin: left bottom; */
+                transform-origin: 0 100%;
+            }
+            .trfo6 {
+                /* 임의위치 */
+                /* width: 100px, height: 100px */
+                transform-origin: 20% 30%;
+                transform-origin: 20px 30px;
+            }
 
     </style>
 </head>
@@ -64,26 +102,49 @@
 <body>
     <h1>변환</h1>
     <h2>회전</h2>
-    <div class="wrap">
-        <span class="trf trfrx">rotateX</span>transform
+    <div class="container">
+        <div class="wrap">
+            <span class="trf trfrx">rotateX</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfry">rotateY</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfrz">rotateZ</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfrd">rotatescale3D</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfr">rotate</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfro">rotateO</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfro">rotateO</span>transform
+        </div>
     </div>
-    <div class="wrap">
-        <span class="trf trfry">rotateY</span>transform
-    </div>
-    <div class="wrap">
-        <span class="trf trfrz">rotateZ</span>transform
-    </div>
-    <div class="wrap">
-        <span class="trf trfrd">rotatescale3D</span>transform
-    </div>
-    <div class="wrap">
-        <span class="trf trfr">rotate</span>transform
-    </div>
-    <div class="wrap">
-        <span class="trf trfro">rotateO</span>transform
-    </div>
-    <div class="wrap">
-        <span class="trf trfro">rotateO</span>transform
+<hr>
+    <div class="container">
+        <div class="wrap">
+            <span class="trf trfr trfo1">rotate</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfr trfo2">rotate</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfr trfo3">rotate</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfr trfo4">rotate</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfr trfo5">rotate</span>transform
+        </div>
+        <div class="wrap">
+            <span class="trf trfr trfo6">rotate</span>transform
+        </div>
     </div>
 
 </body>
