--- a/70_project2/index.html
+++ b/70_project2/index.html
@@ -24,18 +24,18 @@
     </header> <!--  /헤더 -->
 
     <!-- 섹션1 -->
-    <section id="section1">
-        <div><img src="images/Architecture.jpg" alt="Architecture"></div>
+    <section id="section1" class="container">
         <h1 class="mainTit"><b>BR</b> Architects</h1>
+        <img src="images/Architecture.jpg" alt="Architecture">
     </section> <!-- /섹션1 -->
 
     <!-- 섹션2 -->
-    <section>
+    <section id="section2" class="container">
         <h2>Projects</h2>
         <ul>
             <li>
-                <span>Summer House</span>
                 <div><img src="images/pj_summerHouse.jpg" alt="Summer House 이미지1"></div>
+                <span>Summer House</span>
             </li>
             <li>
                 <div><img src="images/pj_brickHouse.jpg" alt="Brick House 이미지2"></div>
@@ -50,26 +50,26 @@
                 <span>Barn House</span>
             </li>
             <li>
-                    <div><img src="images/pj_brickHouse.jpg" alt="Summer House 이미지5"></div>
-                    <span>Summer House</span>
+                <div><img src="images/pj_brickHouse.jpg" alt="Summer House 이미지5"></div>
+                <span>Summer House</span>
             </li>
             <li>
-                    <div><img src="images/pj_summerHouse.jpg" alt="Brick House 이미지6"></div>
-                    <span>Brick House</span>
+                <div><img src="images/pj_summerHouse.jpg" alt="Brick House 이미지6"></div>
+                <span>Brick House</span>
             </li>
             <li>
-                    <div><img src="images/pj_barnHouse.jpg" alt="Renovated 이미지7"></div>
-                    <span>Renovated</span>
+                <div><img src="images/pj_barnHouse.jpg" alt="Renovated 이미지7"></div>
+                <span>Renovated</span>
             </li>
             <li>
-                    <div><img src="images/pj_renovated.jpg" alt="Barn House 이미지8"></div>
-                    <span>Barn House</span>
+                <div><img src="images/pj_renovated.jpg" alt="Barn House 이미지8"></div>
+                <span>Barn House</span>
             </li>
-            </ul>
+        </ul>
 </section> <!-- /섹션2 -->
 
     <!-- 섹션3 -->
-    <section>
+    <section class="container">
             <h2>About</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -110,7 +110,7 @@
     </section> <!-- /섹션3 -->
 
     <!-- 섹션4 -->
-    <section>
+    <section class="container">
             <h2>Contact</h2>
             <p>Lets get in touch and talk about your next project.</p>
             <form action="message.php" mehtod="post">
