--- a/GUI상세디자인_이진주/index.html
+++ b/GUI상세디자인_이진주/index.html
@@ -26,7 +26,7 @@
     <!-- 섹션1 -->
     <section id="section1" class="container">
         <h1 class="mainTit"><b>BR</b> Architects</h1>
-        <img src="images/Architecture.jpg" alt="Architecture">
+        <img src="images/main.png" alt="main">
     </section> <!-- /섹션1 -->
 
     <!-- 섹션2 -->
@@ -34,35 +34,35 @@
         <h2>Projects</h2>
         <ul>
             <li>
-                <div><img src="images/pj_summerHouse.jpg" alt="Summer House 이미지1"></div>
+                <div><img src="images/ct_1.png" alt="카테고리 이미지_페이스"></div>
                 <span>Summer House</span>
             </li>
             <li>
-                <div><img src="images/pj_brickHouse.jpg" alt="Brick House 이미지2"></div>
+                <div><img src="images/ct_2.png" alt="카테고리 이미지_립"></div>
                 <span>Brick House</span>
             </li>
             <li>
-                <div><img src="images/pj_renovated.jpg" alt="Renovated 이미지3"></div>
+                <div><img src="images/ct_3.png" alt="카테고리 이미지_아이"></div>
                 <span>Renovated</span>
             </li>
             <li>
-                <div><img src="images/pj_barnHouse.jpg" alt="Barn House 이미지4"></div>
+                <div><img src="images/ct_4.png" alt="카테고리 이미지_아이스틱"></div>
                 <span>Barn House</span>
             </li>
             <li>
-                <div><img src="images/pj_brickHouse.jpg" alt="Summer House 이미지5"></div>
+                <div><img src="images/ct_5.png" alt="카테고리 이미지_클렌저"></div>
                 <span>Summer House</span>
             </li>
             <li>
-                <div><img src="images/pj_summerHouse.jpg" alt="Brick House 이미지6"></div>
+                <div><img src="images/ct_6.png" alt="카테고리 이미지_팔레트키트"></div>
                 <span>Brick House</span>
             </li>
             <li>
-                <div><img src="images/pj_barnHouse.jpg" alt="Renovated 이미지7"></div>
+                <div><img src="images/ct_7.png" alt="카테고리 이미지_스페셜제품"></div>
                 <span>Renovated</span>
             </li>
             <li>
-                <div><img src="images/pj_renovated.jpg" alt="Barn House 이미지8"></div>
+                <div><img src="images/ct_8.png" alt="카테고리 이미지_메이크업도구"></div>
                 <span>Barn House</span>
             </li>
         </ul>
@@ -79,28 +79,28 @@
                 consequat.</p>
             <ul>
                 <li>
-                    <div><img src="images/John.jpg" alt="john Doe"></div>
+                    <div><img src="images/best_1.png" alt="best_1"></div>
                     <h3>John Doe</h3>
                     <P>CEO & Founder</P>
                     <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
                     <a href="#">Contact</a>
                 </li>
                 <li>
-                    <div><img src="images/Jane.jpg" alt="Jane Doe"></div>
+                    <div><img src="images/best_2.png" alt="best_2"></div>
                     <h3>Jane Doe</h3>
                     <P>Architect</P>
                     <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
                     <a href="#"n>Contact</a>
                 </li>
                 <li>
-                    <div><img src="images/Mike.jpg" alt="Mike Ross"></div>
+                    <div><img src="images/best_3.png" alt="best_3"></div>
                     <h3>Mike Ross</h3>
                     <P>Architect</P>
                     <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
                     <a href="#">Contact</a>
                 </li>
                 <li>
-                    <div><img src="images/Dan.jpg" alt="Dan Star"></div>
+                    <div><img src="images/best_4.png" alt="best_4"></div>
                     <h3>Dan Star</h3>
                     <P>Architect</P>
                     <P>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</P>
@@ -120,7 +120,7 @@
                 <input type="text" placeholder="Comment" name="user_comment">
                 <button type="summit">SEND MESSAGE</button>
             </form>
-            <img src="images/map.jpg" alt="지도이미지"></img>
+            <img src="images/footer.png" alt="지도이미지"></img>
     </section> <!-- /섹션4 -->
 
     <!-- 푸터 -->
