--- a/52.js/02.output.html
+++ b/52.js/02.output.html
@@ -31,7 +31,12 @@
         2. 숫자(number): 10
      */
 
-        //괄호안에 문자열이 출력된다
+        /* 
+        객체.매서드(매개변수)
+     */
+
+        // 괄호안에 문자열이 출력된다
+        // 문장끝에 ;를 쓴다.
 
         // 경고창
         alert("'hello!'");
@@ -39,7 +44,18 @@
         console.log('hi!');
         // 문서에 쓰기
         document.write('"bye!"');   
+
+        confirm("정말 배경 이미지를 바꾸겠습니까?"); 
+
+        // 입력
+        prompt("이름을 입력하세요.", "아무개");
+
+        // 객체: window, console, document, Date, Math, Array...
+        // 매서드(매개변수...): alert(), log(), write(), 
+        
+
     </script>
+
 </body>
 
 </html>
